--- a/index.html
+++ b/index.html
@@ -9,6 +9,123 @@
 </head>
 
 <body>
+    <main>
+        <h1></h1>
+        <ol>
+            <li>
+                <p>What is the difference between the usage of <strong>HTML and CSS?</strong></p>
+                <p>HTML is used to structure the content on the web page.</p>
+                <p>CSS is used to add style to the content of a web page.</p>
+            </li>
+            <li>
+                <p>What is the newest version of <strong>HTML?</strong></p>
+                <p><em>HTML 5</em></p>
+            </li>
+            <li>
+                <p>What are the top five most used <strong>HTML5 elements</strong>?</p>
+                <p><em>Top five most used HTML5 tags:</em></p>
+                <ol>
+                    <dl>
+                        <dt>
+                            <li>&lt;header&gt;</li>
+                        </dt>
+                        <dd>This tag was made to replace the <span>&lt;div id = "header"&gt;</span>, lots of programmers
+                            still use today because of how much easier this was to type and style.</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <li>&lt;canvas&gt;</li>
+                        </dt>
+                        <dd>
+                            This tag revolutionized web-game developing and is so widely used that it could soon take
+                            over Flash. It supports multiple forms of code, one of the most widely used being WebGL.
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <li>&lt;nav&gt;</li>
+                        </dt>
+                        <dd>
+                            This tag has absolutely wrecked the market and is competing very closely with the first two.
+                            This tag happened to replace the <span>&lt;div id = "nav"&gt;</span> tag that used to be
+                            widely used and is still often used today.
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <li>&lt;section&gt;</li>
+                        </dt>
+                        <dd>
+                            This tag is not as widely used as the <span>&lt;div&gt;</span> tag, but still helps people
+                            organize articles and other things.
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <li>&lt;aside&gt;</li>
+                        </dt>
+                        <dd>
+                            This tag is used for small segments that show up on the side of the page (of course, it
+                            could be used for anything like a <span>&lt;div&gt;</span>)
+                        </dd>
+                    </dl>
+                </ol>
+            </li>
+            <li>
+                <p>Have you checked out the <strong>HTML5 cheatsheet?</strong></p>
+                <p><em>Yes, I've checked out the <a href="https://www.wpkube.com/html5-cheat-sheet/"
+                            target="_blank">HTML5 cheatsheet</a></em></p>
+            </li>
+            <li>
+                <p>What is the difference between <strong>semantic and non-semantic</strong> elements?</p>
+                <p><strong>Semantic elements</strong> are elements with meaning. These elements describe the type of
+                    content they are supposed to contain.</p>
+                <p><strong>Non-semantic elements</strong> don’t have any meaning. They don’t tell anything about the
+                    content they contain. They can be used with different attributes to mark up semantics common to a
+                    group.</p>
+            </li>
+            <li>
+                <p>Why do we prefer using <strong>semantic elements?</strong></p>
+                <p><strong>Semantic elements</strong> make the HTML more comprehensible by better defining the different
+                    sections and
+                    layout of web pages. It makes web pages more informative and adaptable, allowing browsers and search
+                    engines to better interpret content.</p>
+            </li>
+            <li>
+                <p>Do all <strong>browsers support</strong> all of the newest HTML / CSS elements?</p>
+                <p>No. Older browsers not supporting modern features</p>
+            </li>
+            <li>
+                <p>Test the following elements on <a href="https://caniuse.com/" target="_blank">Can I Use</a>:
+                    <code>svg</code>, <code>nav</code>, <code>code</code>, <code>form</code>, <code>datalist</code>.
+                    Which browser version supports
+                    them and which do not?
+                </p>
+                <ul>
+                    <li>
+                        <p><code>svg</code></p>
+                        <img src="img\code-support.png" alt="svg-support">
+                    </li>
+                    <li>
+                        <p><code>nav</code></p>
+                        <img src="img\nav-support.png" alt="nav-support">
+                    </li>
+                    <li>
+                        <p><code>code</code></p>
+                        <img src="img\code-support.png" alt="code-support">
+                    </li>
+                    <li>
+                        <p><code>form</code></p>
+                        <img src="img\form-attribute-support.png" alt="form-attribute-support">
+                    </li>
+                    <li>
+                        <p><code>datalist</code></p>
+                        <img src="img\datalist-support.png" alt="datalist-support">
+                    </li>
+                </ul>
+            </li>
+        </ol>
+    </main>
 
 </body>
 
